--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,15 @@ body
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+#cabecera
+{
+    background: #33A;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5cm;
+}
 #container
 {
     width: 70%;
